themes-placit : correction du z-index des maps Leaflet et vol des icones entité personnalisés

--- a/themes/plateforme-citoyenne-theme/custom/scss/override/custom.scss
+++ b/themes/plateforme-citoyenne-theme/custom/scss/override/custom.scss
@@ -169,4 +169,5 @@ form .pro-facette-date input {
 aside .leaflet-map {
 	width: 100%;
     height: 200px;
+    z-index: 10;
 }
